2005-06-11  Nicolas S. Dade  <ndade@nsd.dyndns.org>

	* pwsafe: reversed sense of diff output
	  during merge so -- and ++ make sense.

2005-04-17  Nicolas S. Dade  <ndade@nsd.dyndns.org>

	* pwsafe: fixed segv in readline() when saved
	  is empty.

2005-03-13  Nicolas S. Dade  <ndade@nsd.dyndns.org>

	* pwsafe: removed selftest script and created
	  a new dir test/ for holding unit tests.
	  Added a number of unit tests.

2005-03-11  Nicolas S. Dade  <ndade@nsd.dyndns.org>

	* pwsafe: g++ 3.4.2 changed the interface from the
	  basic_string<> class to its allocator for the 3rd
	  time. Had enough with chasing non-standards, and
	  instead implemented secstring class myself.

2005-03-08  Nicolas S. Dade  <ndade@nsd.dyndns.org>

	* pwsafe: when doing a --mergedb, try the passphrase
	  of the 1st database when opening the 2nd one
	  before prompting the user.
	
2005-03-05  Nicolas S. Dade  <ndade@nsd.dyndns.org>

	* pwsafe: fixed socklen_t test in configure to #include
	  sys/types.h before sys/socket.h, thus making it work
	  properly on openbsd.

2005-02-18  Nicolas S. Dade  <ndade@nsd.dyndns.org>

	* pwsafe: added -q/--quiet at Jon Krom's request.

2005-02-17  Nicolas S. Dade  <ndade@nsd.dyndns.org>

	* pwsafe: apparently SUSE's autoconf's AC_SYS_POSIX_TERMIOS
	  macro sets ac_sys_posix_termios rather than am_..., so
	  now the if statement in configure.ac tests both.
	  (reported by Jon Krom)

2004-10-05  Nicolas S. Dade  <ndade@nsd.dyndns.org>

	* pwsafe: unknown tag/values in v2 files are preserved
	  instead of being stripped. This is probably the right thing
	  to do in the general case.

2004-10-03  Nicolas S. Dade  <ndade@nsd.dyndns.org>

	* pwsafe: added testv2.dat and added matching test to
	  ./selftest
	* pwsafe: added --mergedb
	
2004-10-02  Nicolas S. Dade  <ndade@nsd.dyndns.org>

	* pwsafe: added -G/--ignore with default value {klipper,
	  xclipboard}
	* pwsafe: added --exportdb
	* pwsafe: added --dbversion and support for pwsafe version 2.0