@@ -2,6 +2,8 @@
 
 	* pwsafe: reversed sense of diff output
 	  during merge so -- and ++ make sense.
+	* pwsafe: went through and cleaned up
+	  compile warnings generated by -Wall
 
 2005-04-17  Nicolas S. Dade  <ndade@nsd.dyndns.org>
 
